# IU3-RPO2021

./: README.md  artSchemaDump.sql
Lab1/project/app/: build.gradle
Lab1/project/app/src/main/: AndroidManifest.xml
Lab1/project/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Lab1/project/gradle/wrapper/: gradle-wrapper.properties
fclient/backend/: pom.xml
fclient/backend/src/main/resources/: application.properties
fclient/libs/mbedtls/mbedtls/visualc/VS2010/: mbedTLS.vcxproj
fclient/project/app/: build.gradle
fclient/project/app/src/main/: AndroidManifest.xml
fclient/project/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/project/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/project/app/src/main/res/values/: styles.xml
fclient/project/gradle/wrapper/: gradle-wrapper.properties
projectSpring/: pom.xml
projectSpring/front/: package-lock.json  package.json
projectSpring/front/src/: App.js
projectSpring/front/src/components/: ArtistListComponent.jsx  CountryComponent.jsx  Home.jsx  Login.jsx  MuseumListComponent.jsx  NavigationBar.jsx  PaginationComponent.jsx  PaintingListComponent.jsx
projectSpring/src/main/java/iu3/rpo/spring/: BackendApplication.java
projectSpring/src/main/java/iu3/rpo/spring/auth/: AuthenticationFilter.java  AuthenticationProvider.java  SecurityConfiguration.java
projectSpring/src/main/java/iu3/rpo/spring/controllers/: ArtistController.java  CountryController.java  LoginController.java  MuseumController.java  PaintingController.java  UserController.java
projectSpring/src/main/java/iu3/rpo/spring/models/: Artist.java  User.java  (+3 more)
projectSpring/src/main/java/iu3/spring/projectSpring/: ProjectSpringApplication.java
projectSpring/src/main/resources/: application.properties
projectSpring/src/test/java/iu3/rpo/spring/: BackendApplicationTests.java
projectSpring/src/test/java/iu3/spring/projectSpring/: ProjectSpringApplicationTests.java
(+29 files in other folders)
